force-app/main/default/objects/Customer_Reference_Request__c/Customer_Reference_Request__c.object-meta.xml
<CustomObject>
    <description>Customer reference request from current customer to Prospect Customer</description>
    <label>Customer Reference Request</label>
    <nameField>
        <displayFormat>CR - {0000}</displayFormat>
        <label>Customer Reference Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Reference Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>