force-app/main/default/objects/Customer_Reference_Request__c/fields/Approved_Referenced_Account__c.field-meta.xml
<CustomField>
    <fullName>Approved_Referenced_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Referenced Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Reference Requests (Approved Referenced Account)</relationshipLabel>
    <relationshipName>Customer_Reference_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>