force-app/main/default/objects/Customer_Reference_Request__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Account__r.BillingStreet + &quot;,&quot; + &quot; &quot;+ Account__r.BillingCity + &quot;,&quot; + &quot; &quot; + Account__r.BillingState + &quot; &quot; + Account__r.BillingCountry + &quot; &quot;+ Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>