force-app/main/default/objects/Customer_Reference_Request__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the request is completed, this checkbox is checked by RSE</description>
    <inlineHelpText>When the request is completed, please check this box</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>