force-app/main/default/objects/Customer_Reference_Request__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Reference Requests (Partner)</relationshipLabel>
    <relationshipName>Customer_Reference_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>