force-app/main/default/objects/Customer_Reference_Request__c/fields/Please_list_any_special_recommendations__c.field-meta.xml
<CustomField>
    <fullName>Please_list_any_special_recommendations__c</fullName>
    <inlineHelpText>List who needs the reference (role) for the prospect, and describe the situation a bit more</inlineHelpText>
    <label>Please list any special recommendations</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>