force-app/main/default/objects/Customer_Reference_Request__c/fields/Products_to_be_referenced__c.field-meta.xml
<CustomField>
    <fullName>Products_to_be_referenced__c</fullName>
    <label>Products to be referenced</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation Agent</fullName>
            </value>
            <value>
                <fullName>DC Extended Warehouse</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Inventory Manager</fullName>
            </value>
            <value>
                <fullName>Mfg Extended Pack</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PaceJet</fullName>
            </value>
            <value>
                <fullName>PayFabric</fullName>
            </value>
            <value>
                <fullName>Returns Tracker</fullName>
            </value>
            <value>
                <fullName>SalesPad</fullName>
            </value>
            <value>
                <fullName>SalesPad Mobile</fullName>
            </value>
            <value>
                <fullName>ShipCenter</fullName>
            </value>
            <value>
                <fullName>ShipTo</fullName>
            </value>
            <value>
                <fullName>WebPortal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>