force-app/main/default/objects/Customer_Reference_Request__c/fields/Reference_Details__c.field-meta.xml
<CustomField>
    <fullName>Reference_Details__c</fullName>
    <inlineHelpText>For the role, location and sic code expand on the request.</inlineHelpText>
    <label>Reference Details</label>
    <type>TextArea</type>
</CustomField>