force-app/main/default/objects/Customer_Reference_Request__c/fields/Reference_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Reference_Requirements__c</fullName>
    <inlineHelpText>Select only 1 or 2 at most</inlineHelpText>
    <label>Reference Requirements</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>SIC Code</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>