force-app/main/default/objects/Customer_Reference_Request__c/fields/Requested_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Requested_Accounts__c</fullName>
    <inlineHelpText>Select 3 accounts that you would like to see. SIC Code Report https://salespad.lightning.force.com/lightning/r/Report/00O3u0000075OtkEAE/view</inlineHelpText>
    <label>Requested Accounts</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>