force-app/main/default/objects/Customer_Reference_Request__c/fields/Requested_call_date_time_1__c.field-meta.xml
<CustomField>
    <fullName>Requested_call_date_time_1__c</fullName>
    <label>Requested call date/time 1</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>