force-app/main/default/objects/Customer_Reference_Request__c/fields/Requested_call_date_time_2__c.field-meta.xml
<CustomField>
    <fullName>Requested_call_date_time_2__c</fullName>
    <label>Requested call date/time 2</label>
    <type>DateTime</type>
</CustomField>