force-app/main/default/objects/Customer_Reference_Request__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <formula>Account__r.Sic</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SIC Code Report https://salespad.lightning.force.com/lightning/r/Report/00O3u0000075OtkEAE/view</inlineHelpText>
    <label>SIC Code</label>
    <type>Text</type>
</CustomField>