force-app/main/default/objects/Customer_Reference_Request__c/fields/SIC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Description__c</fullName>
    <formula>Account__r.SicDesc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Code Description</label>
    <type>Text</type>
</CustomField>