force-app/main/default/objects/Customer_Reference_Request__c/validationRules/Approved_Refrenced_Account_when_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Refrenced_Account_when_Approved</fullName>
    <active>true</active>
    <description>When request os approved then the approved reference account is required</description>
    <errorConditionFormula>AND(  ISPICKVAL(CRR_Status__c, &quot;Approved&quot;)  , ISBLANK(  Approved_Referenced_Account__c ) )</errorConditionFormula>
    <errorMessage>Approved Reference Account is required</errorMessage>
</ValidationRule>