force-app/main/default/objects/Customer_Reference_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CRR_Status__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>